# vibeCodingVSC

./: Proyecto sin título - Editor del proyecto - Apps Script.htm  README.md  accesoAppsScript.html  conGDocs.html  fromGoogle.html  generadorPreguntasTest.html  generardorPreguntar_generico.html  notas.html  partidosCORS.html  ultimos5_celta.html  ultimos5_celta_token.html  ultimos5_celta_visual.html
vibe-coding-with-ai-main/vibe-coding-with-ai-main/: .env.example  .gitignore  README.md  README.v2.md  pyproject.toml
vibe-coding-with-ai-main/vibe-coding-with-ai-main/.cursor/rules/: all-code-examples.mdc  all-engagement.mdc  all-seo.mdc  all-technologies.mdc  all-tone-and-voice.mdc  lesson-frontmatter.mdc  lesson-structure.mdc  lesson-styling.mdc  project-learn-json.mdc
vibe-coding-with-ai-main/vibe-coding-with-ai-main/content/: cursor-rules.md
vibe-coding-with-ai-main/vibe-coding-with-ai-main/content/articles/: vibe-coding-manifesto.md  who-is-alejandro.es.md  who-is-alejandro.md
vibe-coding-with-ai-main/vibe-coding-with-ai-main/content/lessons/: ai-memory-bank.md  building-ai-powered-frontend-layouts.md  (+24 more)
vibe-coding-with-ai-main/vibe-coding-with-ai-main/docs/: llm.md
vibe-coding-with-ai-main/vibe-coding-with-ai-main/memory-bank/: thoughts.md  vibe-coding-with-ai-syllabus.md
vibe-coding-with-ai-main/vibe-coding-with-ai-main/scripts/: clusters.json  create_cluster_rule.py  create_technologies_rule.py  download_clusters.py  download_technologies.py  technologies.json
vibe-coding-with-ai-main/vibe-coding-with-ai-main/workshops/: launching-a-product-fast.md
(+45 files in other folders)
